--- a/galerie.html
+++ b/galerie.html
@@ -9,7 +9,7 @@
 <body>
     <div id="conteneur">
         <header>
-            header
+            La galerie d'images
 
         </header>
         <nav>
