--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="conteneur">
         <header>
-            header
+            À propos de moi
 
         </header>
         <nav>
@@ -24,7 +24,41 @@
             </div>
         </nav>
         <main>
-            main
+            <div class="conteneurIndex">
+                <div class="acceuil">Mon nom est Mathias Demers</div>
+                <div class="acceuil">mon groupe est le 37</div>
+                <div class="acceuil">Le nom du Cegep est le Cegep Lionel Groux</div>
+                <div class="acceuil">L'adresse du Cegep est 100 Rue Duquet, Sainte-Thérèse, QC J7E 3G6</div>
+                <div class="acceuil">Mon adresse courriel du collège est 202489615@edu.clg.qc.ca</div>
+                <div class="acceuil"><a class="acceuil" href='horaire.html'>Horaire</a></div>
+                <div class="acceuil">Mes interet future sont que J’aimerais poursuivre mes études en cybersécurité. Peut-être aussi me spécialiser en modélisation 3D. Mon objectif serait de créer mon propre jeu vidéo et d’en vivre.</div>
+                <img class="imageAcceuil" src="images/overwatch-2.jpg" alt="ilage d'overatch 2">
+                <a class="source1" href="https://mima10.github.io/Laboratoire2/">Labo1</a>
+                <a class="source1" href="https://mima10.github.io/labo2/">Labo2</a>
+                <a class="source1" href="https://mima10.github.io/Labo3/">Labo3</a>
+                <a class="source1" href="https://mima10.github.io/labo4/">Labo4</a>
+                <a class="source1" href="https://mima10.github.io/labo5/">Labo5</a>
+                <a class="source1" href="https://mima10.github.io/tp1/">Tp1</a>
+                <a class="source1" href="https://mima10.github.io/tp2/">Tp2</a>
+                <ul>
+                    <li>Connaissances en Web</li>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                    </ul>
+                    <li>Connaissance en programmation</li>
+                    <ul>
+                        <li>C#</li>
+                    </ul>
+                    <li>Connaissance en système d'exploitation</li>
+                    <ul>
+                        <li>Linux</li>
+                        <li>Windows</li>
+                    </ul>
+                </ul>
+
+            </div>
+            
         </main>
         <footer>
             <div class="conteneurFooter">
