--- a/professions.html
+++ b/professions.html
@@ -9,7 +9,7 @@
 <body>
     <div id="conteneur">
         <header>
-            <div class="titre">5 professions en informatique</div>
+            5 professions en informatique
 
         </header>
         <nav>
