--- a/galerie.html
+++ b/galerie.html
@@ -24,7 +24,8 @@
             </div>
         </nav>
         <main>
-            main
+            <img src="images/volleyball1.jpg" alt="image volleyball">
+            <img src="images/volleyball.jpg" alt="iamge volleyball">
         </main>
         <footer>
             <div class="conteneurFooter">
