--- a/horaire.html
+++ b/horaire.html
@@ -25,22 +25,155 @@
         </nav>
         <main>
             <div class="conteneurCours">
+                <div class="lundi">Lundi</div>
+                <div class="mardi">Mardi</div>
+                <div class="mercredi">Mercredi</div>
+                <div class="jeudi">Jeudi</div>
+                <div class="vendredi">Vendredi</div>
+
+                <div class="conteneurTemps">
+                    <div class="temps">08:00</div>
+                    <div class="temps">08:50</div>
+                    <div class="temps">08:55</div>
+                    <div class="temps">09:45</div>
+                    <div class="temps">09:50</div>
+                    <div class="temps">10:40</div> 
+                    <div class="temps">10:45</div>
+                    <div class="temps">11:35</div>  
+                    <div class="temps">11:40</div>
+                    <div class="temps">12:30</div>
+                    <div class="temps">12:35</div>
+                    <div class="temps">13:25</div>  
+                    <div class="temps">13:30</div>
+                    <div class="temps">14:20</div> 
+                    <div class="temps">14:25</div>
+                    <div class="temps">15:15</div>
+                    <div class="temps">15:20</div>
+                    <div class="temps">16:10</div>
+                    <div class="temps">16:15</div>
+                    <div class="temps">17:05</div>
+                    <div class="temps">17:11</div>
+                    <div class="temps">18:00</div>
+            </div>
+
                 <div class="introProg">
                     <div class="conteneur1Cour">
-                        <div class="nomCour">nomCour</div>
-                        <div class="codeCour">codeCour</div>
-                        <div class="numéroLocal">numéroLocal</div>
-                        <div class="nomProf">nomProf</div>
+                        <div class="nomCour">Introduction à la programmation</div>
+                        <div class="codeCour">420KB1LG</div>
+                        <div>POC-P152</div>
+                        <div>S.Chasse</div>
                     </div>
                 </div>
                 <div class="philo">
                     <div class="conteneur1Cour">
-                        <div class="nomCour">nomCour</div>
-                        <div class="codeCour">codeCour</div>
-                        <div class="numéroLocal">numéroLocal</div>
-                        <div class="nomProf">nomProf</div>
+                        <div class="nomCour">Philosophie et rationalité</div>
+                        <div class="codeCour">340101MQ</div>
+                        <div>COL-D116</div>
+                        <div>M.Gauthier</div>
                     </div>
                 </div>
+                <div class="math">
+                    <div class="conteneur1Cour">
+                        <div class="nomCour">Mathématiques pour l'informatique</div>
+                        <div class="codeCour">201KB1LG</div>
+                        <div>COL-D328</div>
+                        <div>J.Racicot</div>
+                    </div>
+                </div>
+                <div class="introProg1">
+                    <div class="conteneur1Cour">
+                        <div class="nomCour">Introduction à la programmation</div>
+                        <div class="codeCour">420KB1LG</div>
+                        <div>POC-P152</div>
+                        <div>S.Chasse</div>
+                    </div>
+                </div>
+                <div class="exploitation">
+                    <div class="conteneur1Cour">
+                        <div class="nomCour">Exploitation d'une station de travaille</div>
+                        <div class="codeCour">420KB3LG</div>
+                        <div>POC-P112</div>
+                        <div>A.André-Lespérence</div>
+                    </div>
+                </div>
+                <div class="francais">
+                    <div class="conteneur1Cour">
+                        <div class="nomCour">Écriture et littérature</div>
+                        <div class="codeCour">601101MQ</div>
+                        <div>COL-D228</div>
+                        <div>A.Kemp</div>
+                    </div>
+                </div>
+                <div class="introProg2">
+                    <div class="conteneur1Cour">
+                        <div class="nomCour">Introduction à la programmation</div>
+                        <div class="codeCour">420KB1LG</div>
+                        <div>POC-P152</div>
+                        <div>S.Chasse</div>
+                    </div>
+                </div>
+                <div class="concepWeb">
+                    <div class="conteneur1Cour">
+                        <div class="nomCour">Conception d'interfaces Web</div>
+                        <div class="codeCour">420KB2LG</div>
+                        <div>POC-P002</div>
+                        <div>J.Beaubien</div>
+                    </div>
+                </div>
+                <div class="exploitation1">
+                    <div class="conteneur1Cour">
+                        <div class="nomCour">Exploitation d'une station de travaille</div>
+                        <div class="codeCour">420KB3LG</div>
+                        <div>POC-P112</div>
+                        <div>A.André-Lespérence</div>
+                    </div>
+                </div>
+                <div class="aideFrancais">
+                    <div class="conteneur1Cour">
+                        <div class="nomCour">Mise à niveau du français</div>
+                        <div class="codeCour">601012JU</div>
+                        <div>COL-F311</div>
+                        <div>A.Kemp</div>
+                    </div>
+                </div>
+                <div class="introProg3">
+                    <div class="conteneur1Cour">
+                        <div class="nomCour">Introduction à la programmation</div>
+                        <div class="codeCour">420KB1LG</div>
+                        <div>POC-P152</div>
+                        <div>S.Chasse</div>
+                    </div>
+                </div>
+                <div class="francais1">
+                    <div class="conteneur1Cour">
+                        <div class="nomCour">Écriture et littérature</div>
+                        <div class="codeCour">601101MQ</div>
+                        <div>COL-D228</div>
+                        <div>A.Kemp</div>
+                    </div>
+                </div>
+                <div class="math1">
+                    <div class="conteneur1Cour">
+                        <div class="nomCour">Mathématiques pour l'informatique</div>
+                        <div class="codeCour">201KB1LG</div>
+                        <div>COL-D328</div>
+                        <div>J.Racicot</div>
+                    </div>
+                </div>
+            </div>
+            <div class="conteneurApresiation">
+                <div><img class="rigt" src="images/programation.jpg" alt="image programation"></div>
+                <div>Introduction à la programmation</div>
+                <div>Introduit a programer</div>
+                <div>On a pu créé un jeux video comme pfi</div>
+                <div>Sa a été lon avent de pouvoir créé un jeux video</div>
+                
+                <div><img class="rigt" src="images/math.jpg" alt="image math"></div>
+                <div>Mathématique</div>
+                <div>Mathématique pour l'informatique</div>
+                <div>Jai toujour aimer faire des mathématique</div>
+                <div>Je trouve que s'était trop simple</div>
+                
             </div>
         </main>
         <footer>
