--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <main>
             <div class="conteneurIndex">
                 <div class="acceuil">Mon nom est Mathias Demers</div>
-                <div class="acceuil">mon groupe est le 37</div>
+                <div class="acceuil">mon groupe est le 1</div>
                 <div class="acceuil">Le nom du Cegep est le Cegep Lionel Groux</div>
                 <div class="acceuil">L'adresse du Cegep est 100 Rue Duquet, Sainte-Thérèse, QC J7E 3G6</div>
                 <div class="acceuil">Mon adresse courriel du collège est 202489615@edu.clg.qc.ca</div>
@@ -42,19 +42,15 @@
                 <a class="source1" href="https://mima10.github.io/tp2/">Tp2</a>
                 <ul>
                     <li>Connaissances en Web</li>
-                    <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                    </ul>
+                        <li class="cercleVide">HTML</li>
+                        <li class="cercleVide">CSS</li>
                     <li>Connaissance en programmation</li>
-                    <ul>
-                        <li>C#</li>
-                    </ul>
+                        <li class="cercleVide">C#</li>
+
                     <li>Connaissance en système d'exploitation</li>
-                    <ul>
-                        <li>Linux</li>
-                        <li>Windows</li>
-                    </ul>
+                        <li class="cercleVide">Linux</li>
+                        <li class="cercleVide">Windows</li>
+
                 </ul>
 
             </div>
