--- a/kb2plus.html
+++ b/kb2plus.html
@@ -24,7 +24,13 @@
             </div>
         </nav>
         <main>
-            main
+           <ol>
+            <li>Utiliser la balise video pour choisire les dimention d'une vido.</li>
+            <li>Utiliser la balise audio pour pouvoir mettre du song dans le site web.</li>
+            <li>Utiliser a linterieur de video ou audio source pour mettre la source avec src et le type avec type.</li>
+            <li>Utiliser la balise iframe pour pouvoir mettre une video youtuve</li>
+            <li>Utiliser la balise button pour pouvoir mettre un bouton</li>
+           </ol>
         </main>
         <footer>
             <div class="conteneurFooter">
